if correct, hints are converted to training data

--- a/app/src/main/res/drawable/dark_button_color.xml
+++ b/app/src/main/res/drawable/dark_button_color.xml
@@ -21,27 +21,38 @@
     <!-- ... add more items if you want more layers to shadow for depth effect ... -->
 
     <!-- Button Foreground -->
-    <item android:bottom="5dp" android:right="2dp" android:state_pressed="false">
-        <shape android:shape="rectangle">
-            <!--      fajne      android:startColor="#1B2135"
+    <item android:bottom="5dp" android:right="2dp">
+        <selector>
+            <item android:state_pressed="true">
+                <shape android:shape="rectangle">
+                    <gradient
+                        android:startColor="#1B2135"
                         android:centerColor="#191F32"
                         android:endColor="#1B2135"
-
-                            android:startColor="#4D3D80"
-                            android:centerColor="#483681"
-                            android:endColor="#4D3D80"
-                        -->
-            <gradient
-                android:startColor="#1B2135"
-                android:centerColor="#191F32"
-                android:endColor="#1B2135"
-                android:angle="90"
-                android:centerX="0.2"
-                android:centerY="0.5" />
-            <corners android:radius="5dp" /> <!-- Corner radius of button -->
-            <stroke
-                android:width="2dp"
-                android:color="#3D3264"/>
-        </shape>
+                        android:angle="90"
+                        android:centerX="0.2"
+                        android:centerY="0.5" />
+                    <corners android:radius="5dp" /> <!-- Corner radius of button -->
+                    <stroke
+                        android:width="2dp"
+                        android:color="#ADA6C7"/>
+                </shape>
+            </item>
+            <item android:state_pressed="false">
+                <shape android:shape="rectangle">
+                    <gradient
+                        android:startColor="#1B2135"
+                        android:centerColor="#191F32"
+                        android:endColor="#1B2135"
+                        android:angle="90"
+                        android:centerX="0.2"
+                        android:centerY="0.5" />
+                    <corners android:radius="5dp" /> <!-- Corner radius of button -->
+                    <stroke
+                        android:width="2dp"
+                        android:color="#3D3264"/>
+                </shape>
+            </item>
+        </selector>
     </item>
 </layer-list>
