--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
 
     <TextView
         android:id="@+id/textViewCurrentWorkout"
@@ -30,25 +28,53 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textViewCurrentWorkout" />
 
-    <Button
-        android:id="@+id/buttonSaveWorkout"
-        android:layout_width="150dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginHorizontal="15dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="15dp"
-        android:text="Save Workout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/expandableListViewWorkout" />
-
-    <Button
-        android:id="@+id/buttonCancelWorkout"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="32dp"
-        android:text="Cancel Workout"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/expandableListViewWorkout" />
+        app:layout_constraintTop_toBottomOf="@+id/expandableListViewWorkout">
+
+        <Button
+            android:id="@+id/buttonCancelWorkout"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Cancel Workout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/expandableListViewWorkout" />
+
+        <FrameLayout
+            android:id="@+id/buttonTimer"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_marginHorizontal="10dp"
+            android:clickable="true"
+            android:background="@drawable/dark_button_color">
+            <ImageView
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:background="@drawable/outline_timer_24"
+                android:layout_gravity="center"/>
+
+        </FrameLayout>
+
+
+        <Button
+            android:id="@+id/buttonSaveWorkout"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:text="Save Workout"
+            android:layout_weight="1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/expandableListViewWorkout" />
+
+    </LinearLayout>
+
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/hGuideline"
