timer can be set now

--- a/app/src/main/res/layout/fragment_charts.xml
+++ b/app/src/main/res/layout/fragment_charts.xml
@@ -22,7 +22,13 @@
         android:layout_marginHorizontal="40dp"
         android:layout_marginTop="20dp"
         android:hint="Select exercise"
+        android:inputType="textShortMessage"
+        android:overScrollMode="ifContentScrolls"
+        android:scrollHorizontally="true"
+        android:scrollbarStyle="insideOverlay"
+        android:scrollbars="horizontal"
         android:textAlignment="center"
+        android:maxLines="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
