fixed chart's marker bug and other issues
marker is now initialized when app's theme has been changed, added theme adaptation of timer and buttons

--- a/app/src/main/res/drawable/clicked_button_color.xml
+++ b/app/src/main/res/drawable/clicked_button_color.xml
@@ -31,6 +31,9 @@
             <corners
                 android:radius="5dp"/>
             <corners android:radius="3dp" />
+            <stroke
+                android:width="2dp"
+                android:color="#71A2C3"/>
         </shape>
     </item>
 </layer-list>
