--- a/app/src/main/res/layout/fragment_charts.xml
+++ b/app/src/main/res/layout/fragment_charts.xml
@@ -91,6 +91,17 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.25" />
 
+    <ProgressBar
+        android:id="@+id/loadingChart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginBottom="230dp"/>
+
     <com.patrykandpatrick.vico.views.chart.CartesianChartView
         android:id="@+id/chartViewLoad"
         android:layout_width="match_parent"
