--- a/app/src/main/res/drawable/dark_blue_timer_button.xml
+++ b/app/src/main/res/drawable/dark_blue_timer_button.xml
@@ -9,13 +9,13 @@
     <item>
         <shape android:shape="oval">
             <gradient
-                android:angle="90"
+                android:startColor="#283840"
                 android:centerColor="#000f18"
-                android:centerX="0.01"
-                android:centerY="0.5"
-                android:endColor="#1B2135"
-                android:startColor="#2D2F32" />
-            <corners android:radius="15dp" />
+                android:endColor="#283840"
+                android:angle="90"
+                android:centerX="0.008"
+                android:centerY="0.5" />
+            <corners android:radius="5dp" />
         </shape>
     </item>
 
@@ -26,14 +26,14 @@
         <selector>
             <item android:state_pressed="true">
                 <shape android:shape="oval">
-                    <solid android:color="#5568A8" />
+                    <solid android:color="#3A97C6" />
 
                 </shape>
             </item>
             <item android:state_pressed="false">
                 <shape android:shape="oval">
-                    <solid android:color="#2F56D4"
-                    />
+                    <solid android:color="#276483"
+                        />
                 </shape>
             </item>
         </selector>
