--- a/app/src/main/res/layout/activity_edit_history.xml
+++ b/app/src/main/res/layout/activity_edit_history.xml
@@ -40,25 +40,33 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textViewEditHistoryDate" />
 
-    <Button
-        android:id="@+id/buttonSaveWorkout"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="20dp"
-        android:text="Save"
+        android:orientation="horizontal"
+        android:layout_marginTop="30dp"
+        android:layout_marginHorizontal="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/expandableListViewEditHistory" />
-
-    <Button
-        android:id="@+id/buttonCancelWorkout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="32dp"
-        android:text="Cancel"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/expandableListViewEditHistory" />
+        app:layout_constraintTop_toBottomOf="@+id/expandableListViewEditHistory">
+
+        <Button
+            android:id="@+id/buttonSaveWorkout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Save"
+            android:layout_marginEnd="30dp"
+            android:layout_weight="1"/>
+
+        <Button
+            android:id="@+id/buttonCancelWorkout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cancel"
+            android:layout_marginStart="30dp"
+            android:layout_weight="1"/>
+    </LinearLayout>
+
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/hGuideline"
