--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -74,12 +74,9 @@
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_marginHorizontal="30dp"
-        app:cpb_background_progressbar_color="#40475F"
         app:cpb_background_progressbar_width="25dp"
         app:cpb_progress_direction="to_right"
         app:cpb_progressbar_color_direction="top_to_bottom"
-        app:cpb_progressbar_color_start="#4F78FF"
-        app:cpb_progressbar_color_end="#462691"
         app:cpb_progressbar_width="25dp"
         app:cpb_round_border="false"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -101,8 +98,8 @@
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_marginEnd="25dp"
-            android:background="@drawable/timer_button"
-            android:clickable="true">
+            android:clickable="true"
+            android:contentDescription="Stop and restart timer">
 
             <ImageView
                 android:layout_width="50dp"
@@ -116,8 +113,8 @@
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_marginStart="25dp"
-            android:background="@drawable/timer_button"
-            android:clickable="true">
+            android:clickable="true"
+            android:contentDescription="start/stop timer">
 
             <ImageView
                 android:id="@+id/imagePlayPause"
