--- a/app/src/main/res/layout/activity_create_routine.xml
+++ b/app/src/main/res/layout/activity_create_routine.xml
@@ -7,6 +7,25 @@
     android:layout_height="match_parent">
 
 
+    <FrameLayout
+        android:id="@+id/goBackButton"
+        android:layout_width="60dp"
+        android:layout_height="54dp"
+        android:layout_marginStart="5dp"
+        android:clickable="true"
+        android:contentDescription="return"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:background="@drawable/baseline_arrow_back_24" />
+
+    </FrameLayout>
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewRoutineItems"
         android:layout_width="match_parent"
@@ -14,15 +33,16 @@
         app:layout_constraintBottom_toTopOf="@+id/hGuideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextRoutineName" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextRoutineName"
+        android:contentDescription="exercises"/>
 
 
     <Button
         android:id="@+id/buttonSaveRoutine"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_height="48dp"
         android:layout_marginHorizontal="140dp"
+        android:layout_marginTop="12dp"
         android:text="Save Routine"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,11 +50,11 @@
 
     <Button
         android:id="@+id/buttonAddExercise"
+        style="@style/DarkBlueCustomAddButtonColor"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/baseline_add_circle_24"
         android:contentDescription="add"
-        style="@style/DarkBlueCustomAddButtonColor"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline"
@@ -42,12 +62,13 @@
 
     <EditText
         android:id="@+id/editTextRoutineName"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Enter routine name"
         android:inputType="text"
         android:textAlignment="center"
         android:textSize="25sp"
+        android:layout_marginHorizontal="80dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -72,7 +93,6 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.88" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
