--- a/app/src/main/res/layout/activity_edit_history.xml
+++ b/app/src/main/res/layout/activity_edit_history.xml
@@ -6,6 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".activity.EditHistoryActivity">
 
+    <FrameLayout
+        android:id="@+id/goBackButton"
+        android:layout_width="60dp"
+        android:layout_height="54dp"
+        android:layout_marginStart="5dp"
+        android:clickable="true"
+        android:contentDescription="return"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:background="@drawable/baseline_arrow_back_24" />
+
+    </FrameLayout>
+
     <TextView
         android:id="@+id/textViewEditHistoryRoutineName"
         android:layout_width="wrap_content"
