--- a/app/src/main/res/layout/edit_text_dialog_layout.xml
+++ b/app/src/main/res/layout/edit_text_dialog_layout.xml
@@ -6,7 +6,7 @@
 <EditText
     android:id="@+id/editTextName"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="50dp"
     android:layout_marginHorizontal="30dp"
     android:hint="hint" />
 </LinearLayout>
