--- a/app/src/main/res/layout/fragment_training_history.xml
+++ b/app/src/main/res/layout/fragment_training_history.xml
@@ -9,7 +9,7 @@
     <SearchView
         android:id="@+id/searchViewHistory"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:layout_margin="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +30,8 @@
         android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/searchViewHistory" />
+        app:layout_constraintTop_toBottomOf="@+id/searchViewHistory"
+        android:contentDescription="training history"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
