--- a/app/src/main/res/layout/routine_expandable_title_layout.xml
+++ b/app/src/main/res/layout/routine_expandable_title_layout.xml
@@ -5,38 +5,48 @@
     android:id="@+id/expandableLayoutTitle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:clickable="true">
+    android:clickable="true"
+    android:orientation="horizontal">
 
+    <ImageView
+        android:id="@+id/buttonExpand"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="6dp"
+        android:background="@drawable/baseline_expand_more_24"
+        android:rotation="-90" />
+
+    <EditText
+        android:id="@+id/editTextExerciseName"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="45dp"
+        android:layout_weight="1"
+        android:hint="Exercise name"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <FrameLayout
+        android:id="@+id/imageButtonMove"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="12dp"
+        android:clickable="true"
+        android:contentDescription="move" >
         <ImageView
-            android:id="@+id/buttonExpand"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="6dp"
-            android:background="@drawable/baseline_expand_more_24"
-            android:rotation="-90"/>
-
-        <EditText
-            android:id="@+id/editTextExerciseName"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="45dp"
-            android:layout_weight="1"
-            android:hint="Exercise name"
-            android:textSize="22sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageButton
-            android:id="@+id/imageButtonMove"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="12dp"
+            android:layout_gravity="center"
             android:background="@drawable/drag_icon4"
-            android:contentDescription="move" />
+            android:contentDescription="move"/>
+
+    </FrameLayout>
+
+
 </LinearLayout>
