--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -1,29 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/buttonCharts"
         android:title="Stats"
-        android:icon="@drawable/baseline_bar_chart_24"/>
+        android:icon="@drawable/charts_icon1"/>
 
     <item
         android:id="@+id/buttonTrainingPlans"
         android:title="Plans"
-        android:icon="@drawable/plans_icon_png"/>
+        android:icon="@drawable/workout_plans_icon"/>
 
 
     <item
         android:id="@+id/buttonHome"
         android:title="Workout"
-        android:icon="@drawable/home_icon_png"/>
+        android:icon="@drawable/workout_icon"/>
 
     <item
         android:id="@+id/buttonTrainingHistory"
         android:title="History"
-        android:icon="@drawable/history_icon_png"/>
+        android:icon="@drawable/history_icon1"/>
 
     <item
         android:id="@+id/buttonSettings"
         android:title="Settings"
-        android:icon="@drawable/settings_icon_png"/>
+        android:icon="@drawable/settings_icon1"/>
 </menu>
