--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -4,11 +4,11 @@
 
     <PreferenceCategory app:title="App settings" app:icon="@drawable/baseline_settings_24">
         <ListPreference
-            app:defaultValue="Dark"
+            app:defaultValue="Default"
             app:key="theme"
             app:title="App theme"
             app:useSimpleSummaryProvider="true"
-            android:defaultValue="Dark"
+            android:defaultValue="Default"
             app:entries="@array/themes_entries"
             app:entryValues="@array/themes_values" />
     </PreferenceCategory>
