--- a/app/src/main/res/layout/fragment_charts.xml
+++ b/app/src/main/res/layout/fragment_charts.xml
@@ -117,5 +117,15 @@
         app:showEndAxis="true"
         app:showStartAxis="true" />
 
+    <ImageView
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_marginBottom="100dp"
+        android:alpha="0.2"
+        android:background="@drawable/charts_icon_background"
+        app:layout_constraintBottom_toBottomOf="@+id/composeView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
