--- a/app/src/main/res/layout/fragment_create_routine_slide.xml
+++ b/app/src/main/res/layout/fragment_create_routine_slide.xml
@@ -6,12 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".tutorial.fragments.CreateRoutineSlide">
 
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="254dp"
-        android:layout_height="541dp"
-        android:layout_marginTop="40dp"
-        android:background="@drawable/tutorial_start_workout"
+    <androidx.media3.ui.PlayerView
+        android:id="@+id/playerView"
+        android:layout_width="match_parent"
+        android:layout_height="650dp"
+        android:layout_margin="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -20,13 +19,13 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:text="Create your routines"
         android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView1" />
+        app:layout_constraintTop_toBottomOf="@+id/playerView" />
 
     <TextView
         android:id="@+id/skipRoutineTutorial"
