--- a/app/src/main/res/layout/fragment_start_workout_slide.xml
+++ b/app/src/main/res/layout/fragment_start_workout_slide.xml
@@ -6,12 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".tutorial.fragments.StartWorkoutSlide">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="254dp"
-        android:layout_height="541dp"
-        android:layout_marginTop="40dp"
-        android:background="@drawable/tutorial_start_workout"
+    <androidx.media3.ui.PlayerView
+        android:id="@+id/playerView"
+        android:layout_width="match_parent"
+        android:layout_height="650dp"
+        android:layout_margin="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -20,7 +19,7 @@
         android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginHorizontal="50dp"
         android:text="Start your workout and have everything at hand"
         android:textAlignment="center"
@@ -28,7 +27,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/playerView" />
 
     <TextView
         android:id="@+id/finish"
