changed app logo, added auto backup

--- a/app/src/main/res/xml/backup_rules.xml
+++ b/app/src/main/res/xml/backup_rules.xml
@@ -11,5 +11,5 @@
         path="." />
     <include
         domain="database"
-        path="GymApp.db" />
+        path="GymApp" />
 </full-backup-content>
