--- a/app/src/main/res/xml/data_extraction_rules.xml
+++ b/app/src/main/res/xml/data_extraction_rules.xml
@@ -10,6 +10,6 @@
             path="." />
         <include
             domain="database"
-            path="GymApp.db" />
+            path="GymApp" />
     </cloud-backup>
 </data-extraction-rules>
