--- a/app/src/main/res/layout/routine_expandable_title_layout.xml
+++ b/app/src/main/res/layout/routine_expandable_title_layout.xml
@@ -27,9 +27,7 @@
         android:hint="Exercise name"
         android:textSize="22sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:singleLine="true"/>
 
     <FrameLayout
         android:id="@+id/imageButtonMove"
