exercises and sets can be deleted

--- a/app/src/main/res/layout/no_plan_workout_expandable_layout.xml
+++ b/app/src/main/res/layout/no_plan_workout_expandable_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -55,16 +56,28 @@
             android:layout_marginEnd="10dp"/>
 
         <FrameLayout
-            android:id="@+id/buttonAddSet"
+            android:id="@+id/buttonRemoveSet"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_gravity="end"
-            android:layout_marginEnd="10dp">
+            android:layout_gravity="end">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/baseline_add_circle_24"
+                android:background="@drawable/baseline_remove_circle_outline_24"
+                android:layout_gravity="center"/>
+        </FrameLayout>
+
+        <FrameLayout
+            android:id="@+id/buttonAddSet"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_gravity="end">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/baseline_add_circle_outline_24"
                 android:layout_gravity="center"/>
         </FrameLayout>
 
