--- a/app/src/main/res/layout/no_plan_workout_expandable_title_layout.xml
+++ b/app/src/main/res/layout/no_plan_workout_expandable_title_layout.xml
@@ -20,16 +20,29 @@
             android:textStyle="bold"/>
 
         <FrameLayout
-            android:id="@+id/buttonAddExercise"
+            android:id="@+id/buttonRemoveExercise"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_gravity="end"
-            android:layout_marginEnd="10dp">
+            android:layout_gravity="end">
 
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:background="@drawable/baseline_add_circle_24"
+                android:background="@drawable/baseline_remove_circle_outline_24"
+                android:layout_gravity="center"/>
+        </FrameLayout>
+
+        <FrameLayout
+            android:id="@+id/buttonAddExercise"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_gravity="end"
+>
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@drawable/baseline_add_circle_outline_24"
                 android:layout_gravity="center"/>
         </FrameLayout>
     </LinearLayout>
